# ece595-term-paper

./: .gitignore  .latexmkrc  .pre-commit-config.yaml  README.md  environment.yml  main.brf  main.tex  pyproject.toml  refs.bib
configs/: navit_64.yaml
docs/: rectified_flow.md
experiments/: README.md
experiments/navit_rf/: .gitignore  bleh2.ipynb  data.py  model.py  rect_flow_train.ipynb  training.ipynb  training_template.ipynb  utils.py
notes/: Day0_reading.md
presentation/: slides.css  slides.qmd
scripts/: sample.py  train.py
sec/: 0_abstract.tex  1_intro.tex  2_background.tex  3_summaries.tex  4_critique.tex  5_implementation.tex  6_evaluation.tex  7_conclusion.tex
src/navit_rf/: __init__.py  config.py  data.py  embeddings.py  loops.py  model.py  navit.py  reflow.py  sampling.py  trainer.py  utils.py
tests/: test_embeddings.py  test_packer.py  test_trainer.py
